testsuite/tests/grammar/invalid_error_node/test_nonnull_field.lkt
import common

class ErrorDecl : FooNode implements ErrorNode {
    @parse_field f: Example
}
